# WXBridge

./: README.md  pyproject.toml  requirements.txt
docs/: media-params-snapshot.md  official-sdk-reference.md
examples/: claude_adapter.py  echo_adapter.py  media_adapter.py  openai_adapter.py  web_server.py
tests/: conftest.py  test_auth.py  test_bridge.py  test_ilink_client.py  test_integration.py  test_models.py  test_storage.py
wxbridge/: __init__.py  adapter.py  auth.py  bridge.py  ilink_client.py  media.py  models.py  storage.py
wxbridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
