[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wxbridge"
version = "0.4.4"
description = "Connect any AI product to WeChat personal accounts via Tencent iLink Bot API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
redis  = ["redis[asyncio]>=5.0"]
media  = ["cryptography>=42.0"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "cryptography>=42.0"]
full   = ["redis[asyncio]>=5.0", "cryptography>=42.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "redis[asyncio]>=5.0",
    "cryptography>=42.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/your-org/wxbridge"
Issues = "https://github.com/your-org/wxbridge/issues"

[tool.setuptools.packages.find]
include = ["wxbridge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
